--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ __pycache__/geo_sam_tool.cpython-39.pyc
 __pycache__/sam_ext.cpython-39.pyc
 __pycache__/__init__.cpython-39.pyc
 __pycache__/torchgeo_sam.cpython-39.pyc
+features/**/*.csv
 .DS_Store
