--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-__pycache__/geo_sam_tool.cpython-39.pyc
-__pycache__/sam_ext.cpython-39.pyc
-__pycache__/__init__.cpython-39.pyc
-__pycache__/torchgeo_sam.cpython-39.pyc
+**/*.pyc
 features/**/*.csv
 rasters/**/*.aux.xml
 .DS_Store
